# LearnOpenGL

./: CMakeLists.txt
dependencies/glad/: glad.c  glad.h
include/: Game.hpp
include/client/: ClientOptions.hpp  Engine.hpp
include/client/gl/: GLErrors.hpp  Image.hpp  Model.hpp  Shader.hpp  Texture.hpp  TexturedModel.hpp  VertexArray.hpp
include/client/renderer/: Model.hpp  Renderer.hpp
include/client/sdl/: KeyInput.hpp  SDLErrors.hpp  Window.hpp
include/client/state/: KeyState.hpp
include/common/util/: ErrorHandler.hpp
shaders/: color_fragment.glsl  color_vertex.glsl  texture_fragment.glsl  texture_vertex.glsl  yellow_fragment.glsl
src/: Game.cpp  Main.cpp
src/client/: Engine.cpp
src/client/gl/: GLErrors.cpp  Image.cpp  Model.cpp  Shader.cpp  Texture.cpp  TexturedModel.cpp  VertexArray.cpp
src/client/renderer/: Model.cpp  Renderer.cpp
src/client/sdl/: KeyInput.cpp  SDLErrors.cpp  Window.cpp
src/client/state/: KeyState.cpp
src/common/util/: ErrorHandler.cpp
